--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,91 @@
 	box-sizing: border-box;
 }
 
+body {
+	font-family: Geneva, Arial, 'sans-serif';
+}
 .container{
 	width: 940px;
 	margin:0 auto;
 }
+
+.cabecera{
+	background: #a90329; /* Old browsers */
+background: -moz-linear-gradient(top,  #a90329 0%, #8f0222 44%, #6d0019 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
+	padding: 10px;
+	text-align: center;
+
+}
+
+.cabecera h1{
+	color: #FFF;
+}
+
+.cabecera img{
+	width: 10%;
+	height: auto;
+}
+
+main{
+	margin:20px 0;
+}
+
+textarea.escribe{
+	padding:10px;
+	width: 100%;
+}
+
+input.desc-label{
+	width: 30%;
+	margin:20px;
+}
+
+article.botonera{
+	text-align: right;
+}
+
+article.botonera button{
+	padding:10px;
+	background: #a90329; /* Old browsers */
+background: -moz-linear-gradient(top,  #a90329 0%, #8f0222 44%, #6d0019 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a90329), color-stop(44%,#8f0222), color-stop(100%,#6d0019)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #a90329 0%,#8f0222 44%,#6d0019 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
+	border: 0;
+	color:#FFF;
+	outline:none;
+
+}
+
+article.botonera button:active{
+	opacity: .8;	
+}
+
+section.feed{
+	background: #F9F9F9;
+	padding:2px 0;
+	margin:20px 0;
+}
+
+section.feed h2{
+	padding:10px;
+	text-align: center;
+}
+
+article.single-comment{
+	font-size:14px;
+	line-height: 1.6em;
+	padding:10px;
+	margin:10px;
+	background:#F1F1F1
+}
+
